# GreenCart

./: README.md
backend/: .env.local  next.config.js  package-lock.json  package.json
backend/.next/: trace
backend/.next/cache/: .rscinfo
backend/.next/server/vendor-chunks/: @swc.js  next.js
backend/lib/: amazonService.js  db.js  ebayService.js  mockService.js
backend/middleware/: auth.js
backend/models/: User.js
backend/pages/: index.js  product.js
backend/pages/api/auth/: login.js  register.js
backend/pages/api/products/: search.js
backend/src/: index.js
backend/src/services/: amazonService.js  ebayService.js  mockService.js  walmartService.js
extension/: .env  ai_analysis_service.py  app.py  pyproject.toml  recommendation_engine.py  replit.nix
extension/frontend/: package-lock.json  package.json  vite.config.js
extension/frontend/public/: manifest.json
extension/frontend/src/: App.jsx  background.js  content.js  popup.html  popup.js
extension/frontend/src/assets/: icon.jsx
extension/frontend/src/extension/: Extension.jsx
extension/frontend/src/extension/component/: PriceComparision.jsx  ProductAnalysis.jsx  Tag.jsx
extension/frontend/src/pages/: Landing.jsx
extension/static/css/: style.css
extension/static/js/: main.js
extension/templates/: index.html  test_image_upload.html
frontend/: .env  index.html  package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/assets/: icon.jsx
frontend/src/components/: ProductImage.jsx
frontend/src/pages/: Landing.jsx  Market.jsx
frontend/src/pages/Auth/: AuthContext.jsx  (+4 more)
(+8 files in other folders)
